# trajdata

./: .gitignore  DATASETS.md  README.md  copy_to_public.sh  environment.yml  preprocess_data.py  preprocess_maps.py  requirements.txt  setup.cfg  test.py  test.py.lprof  test_pkarkus.py  test_sim.py
avdata/data_structures/: __init__.py  batch.py  scene_time_node.py
avdata/utils/: env_utils.py  nusc_utils.py
examples/: batch_example.py  cache_and_filter_example.py  lane_query_example.py  map_api_example.py  preprocess_data.py  scene_batch_example.py  sim_example.py  simple_sim_example.py  visualization_example.py
ngc/: Dockerfile  copy_to_ngc.sh  jupyter_lab.json  ngc_test.py  preprocess_data_ngc.py
src/avdata/: dataset.py
src/avdata/augmentation/: augmentation.py  low_vel_yaw_correction.py
src/avdata/caching/: __init__.py  base_cache.py  df_cache.py  env_cache.py  scene_cache.py  sqlite_cache.py
src/avdata/data_structures/: __init__.py  agent.py  batch.py  batch_element.py  collation.py  data_index.py  map.py  map_patch.py  (+2 more)
src/trajdata/: dataset.py
tests/: Drivesim_scene_generation.py  test_batch_conversion.py  test_collation.py  test_dataset.py  test_datasizes.py  test_description_matching.py  test_state.py
unified_dataset/: __init__.py  batch_item.py  core.py  dataset.py
unified_dataset/data_structures/: __init__.py  agent.py  batch.py  batch_element.py  environment.py  node.py  scene.py  scene_time.py  scene_time_node.py  unified_batch.py  unified_batch_element.py
unified_dataset/utils/: env_utils.py  lyft_utils.py  nusc_utils.py  string_utils.py
(+112 files in other folders)
