[metadata]
name = unified-av-dataloader
version = 0.0.1
author = Boris Ivanovic
author_email = bivanovic@nvidia.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab-master.nvidia.com/nvr-av/unified-av-data-loader
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = unified_dataset
packages = find:
python_requires = >=3.8

[options.packages.find]
where = unified_dataset