[metadata]
name = avdata
version = 0.0.1
author = Boris Ivanovic
author_email = bivanovic@nvidia.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab-master.nvidia.com/nvr-av/unified-av-data-loader
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Private :: Do Not Upload

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
